@@ -1,5 +1,10 @@
 2009-08-24  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
+	* tools/{rgb2ycbcr.c, tiff2rgba.c}: Applied fixes for "Bug 2079 -
+	CVE-2009-2347 libtiff: integer overflows in various inter-color
+	space conversion tools".
+	http://bugzilla.maptools.org/show_bug.cgi?id=2079
+
 	* libtiff/tif_print.c (TIFFPrintDirectory): Apply fix from Jay
 	Berkenbilt for "Bug 2024 - possible null pointer dereference with
 	one-line fix".
